--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,6 @@ repositories {
 }
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    //implementation 'com.google.guava:guava:27.0.1-jre'
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
     testCompile 'org.junit.jupiter:junit-jupiter-params:5.6.0'
@@ -32,6 +29,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+//This allows user input from stdin
+run {
+    standardInput = System.in
 }
 
 // Define the main class for the application
